feat(api): move mesh to manager pkg
